# flask-whisper-speech-recognition

./: .coverage  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  flask-whisper-speech-recognition.yml
.reuse/: dep5
